samples/_failures_safe/1761219695_46b1be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ced5d2d.c: In function ‘main’:
./samples/SAFE/__tmp_3ced5d2d.c:140:5: error: expected declaration or statement at end of input
  140 |     print_matrix(&mat1);
      |     ^~~~~~~~~~~~
